--- a/README.org
+++ b/README.org
@@ -1,7 +1,8 @@
-* boot-asset-fingerprint
 
-[![Build Status](https://travis-ci.org/ELiTLtd/boot-asset-fingerprint.svg?branch=master)](https://travis-ci.org/ELiTLtd/boot-asset-fingerprint)
-[[http://clojars.org/elit/boot-asset-fingerprint][http://clojars.org/afrey/boot-asset-fingerprint/latest-version.svg]]
+
+* boot-asset-fingerprint [![Build Status](https://travis-ci.org/ELiTLtd/boot-asset-fingerprint.svg?branch=master)](https://travis-ci.org/ELiTLtd/boot-asset-fingerprint)
+
+[[http://clojars.org/elit/boot-asset-fingerprint][http://clojars.org/elit/boot-asset-fingerprint/latest-version.svg]]
 
 A boot task to add a cache-busting fingerprint to asset references in
 HTML files.
