--- a/README.org
+++ b/README.org
@@ -53,6 +53,6 @@ each file change regardless of whether any html file changed.
 - [ ] get relative paths with "../" to work
 
 ** Copyright and License
-Copyright © 2016 Adam Frey
+Copyright © 2017 English Language iTutoring Limited
 
 Licensed under the MIT License (see the LICENSE file).
